--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "md-links",
+  "name": "clear",
   "version": "0.1.0",
   "engines": {
     "node": ">=16.x"
@@ -8,5 +8,13 @@
     "createdAt": "2023-05-17T14:36:24.002Z",
     "version": "6.2.0",
     "commit": "6de8e2f7e38d779fd6845c63477977fb1eb3af99"
+  },
+  "dependencies": {
+    "axios": "^1.4.0",
+    "chalk": "^5.2.0",
+    "colors": "^1.4.0",
+    "jsdom": "^22.1.0",
+    "markdown-it": "^13.0.1",
+    "node-fetch": "^3.3.1"
   }
 }
