se agregan test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,12 @@
     "cSpell.words": [
         "Absolut",
         "bootcamp",
+        "Coverted",
+        "extractlink",
         "Índice",
         "resultado",
-        "Ruta"
+        "Ruta",
+        "Whithout",
+        "Whitoud"
     ]     
 }
