--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
     "jsdom": "^22.1.0",
     "markdown-it": "^13.0.1",
     "node-fetch": "^3.3.1"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0"
+  },
+  "scripts": {
+    "test": "jest --coverage",
+    "test": "jest --detectOpenHandles"
   }
-}
+  }
