se agrego cli, comandos, se mejoro estetica

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "Coverted",
         "extractlink",
         "Índice",
+        "Ligth",
         "resultado",
         "Ruta",
         "Whithout",
