--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "chalk": "^5.2.0",
+    "cfonts": "^3.2.0",
+    "chalk": "^5.3.0",
     "colors": "^1.4.0",
     "jsdom": "^22.1.0",
     "markdown-it": "^13.0.1",
