se agrego el enlace simbolico md-links

--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
   "directories": {
     "test": "test"
   },
+  "bin": {
+    "md-links": "./cli.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
