se agrega el readme

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "Absolut",
         "bootcamp",
+        "brokens",
         "Coverted",
         "extractlink",
         "Índice",
