--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "clear",
-  "version": "0.1.0",
+  "name": "md-links--andreroa",
+  "version": "0.1.6",
   "engines": {
     "node": ">=16.x"
   },
@@ -12,28 +12,28 @@
   "dependencies": {
     "axios": "^1.4.0",
     "cfonts": "^3.2.0",
-    "chalk": "^5.3.0",
-    "colors": "^1.4.0",
+     "colors": "^1.4.0",
     "jsdom": "^22.1.0",
-    "markdown-it": "^13.0.1",
-    "node-fetch": "^3.3.1"
-  },
+    "markdown-it": "^13.0.1"
+     },
   "devDependencies": {
-    "eslint": "^8.43.0",
-    "jest": "^29.5.0"
+      "jest": "^29.5.0"
   },
   "scripts": {
     "test": "jest --detectOpenHandles"
   },
-  "description": "* [1. Preámbulo](#1-preámbulo)\r * [2. Resumen del proyecto](#2-resumen-del-proyecto)\r * [3. Objetivos de aprendizaje](#3-objetivos-de-aprendizaje)\r * [4. Consideraciones generales](#4-consideraciones-generales)\r * [5. Criterios de aceptación mínimos del proyecto](#5-criterios-de-aceptación-mínimos-del-proyecto)\r * [6. Entregables](#6-entregables)\r * [7. Hacker edition](#7-hacker-edition)\r * [8. Pistas, tips y lecturas complementarias](#8-pistas-tips-y-lecturas-complementarias)\r * [9. Checklist](#9-checklist)\r * [10. Achicando el problema](#10-achicando-el-problema)",
   "main": "index.js",
   "directories": {
-    "test": "test"
+   "test": "test"
   },
   "bin": {
     "md-links": "./cli.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AndreaRoa/md-links.git"
+  },
+   "author": "@AndreaRoa",
+  "license": "ISC",
+  "homepage": "https://github.com/AndreaRoa/md-links#readme"
 }
